# RustGPT

./: .env.example  .typos.toml  COMPLETE_SUMMARY.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  IMPROVEMENTS.md  MIGRATION.md  PRODUCTION.md  README.md  VISUALIZATION.md  VISUALIZATION_USAGE.md  config.example.toml  rustfmt.toml
examples/: interactive.rs  visualization.rs
src/: checkpoint.rs  config.rs  dataset_loader.rs  embeddings.rs  error.rs  lib.rs  llm.rs  logging.rs  main.rs  metrics.rs  self_attention.rs  training_ui.rs  visualization.rs  vocab.rs
tests/: dataset_loader_test.rs  embeddings_test.rs  feed_forward_test.rs  llm_test.rs  output_projection_test.rs  self_attention_test.rs  transformer_test.rs
