[package]
name = "rustgpt"
version = "0.2.0"
edition = "2021"
authors = ["tekaratzas"]
description = "A production-ready transformer-based LLM implementation in pure Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tekaratzas/RustGPT"
keywords = ["llm", "transformer", "machine-learning", "neural-network"]
categories = ["science", "algorithms"]

[dependencies]
# Core ML dependencies
ndarray = { version = "0.16", features = ["serde"] }
rand = "0.9"
rand_distr = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Data handling
csv = "1.3"

# Error handling & logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# CLI & Configuration
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
dotenv = "0.15"

# Progress bars
indicatif = "0.17"

# Signal handling
signal-hook = "0.3"
tokio = { version = "1", features = ["signal", "rt"] }

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["events"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[lib]
name = "llm"
path = "src/lib.rs"

[[bin]]
name = "llm"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
split-debuginfo = "packed"

[[example]]
name = "interactive"
path = "examples/interactive.rs"

[[example]]
name = "visualization"
path = "examples/visualization.rs"
